--- a/tanzania.html
+++ b/tanzania.html
@@ -57,11 +57,9 @@
 			.domain([0, 1])
 			.range(["rgb(215,25,28)",
 					"rgb(253,174,97)", 
-					"rgb(255,255,191)", 
-					"rgb(166,217,106)",
+					"rgb(166,217,106)", 
 					"rgb(26,150,65)"]);
 
-		var legend_labels = ["0% - 19%", "20% - 39%", "40% - 59%", "60% - 79%", "80% - 100%"];   
 
 		var projection = d3.geo.mercator()
 			.rotate([5,0,0])
@@ -262,18 +260,17 @@
 				  .attr("x", 50)
 				  .attr("y", function(d, i){ return h - (i*ls_h) - ls_h - 4;})
 				  .text(function(d, i){ 
-				  	return legend_labels[i];
-				  	//return formatted(quantize.invertExtent(d)[0]) + " - " + formatted(quantize.invertExtent(d)[1]); 
+				  	return formatted(quantize.invertExtent(d)[0]) + " - " + formatted(quantize.invertExtent(d)[1]); 
 				  });
 
 				legend.append("text")
 				  .attr("x", 50)
 				  .attr("y", 710)
-				  .text("Not surveyed.");
+				  .text("District names don't match.");
 
 
 				//Moving the color legend up and to the left
-				legend.attr("transform", "translate(750,-250)");
+				legend.attr("transform", "translate(50,-160)");
 				
 
 				//Actual viz
